{
    "name": "UserInput",
    "maps": [
        {
            "name": "MainAction",
            "id": "6955be47-d63c-4e4d-91af-f8d057a25110",
            "actions": [
                {
                    "name": "ToggleMenus",
                    "type": "Button",
                    "id": "e6c1b1d8-81cf-4459-b02b-b79b656d48f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5d4e560d-e6f4-421f-9fd7-aa9ee44b5af1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMenus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "219da0eb-1509-4e37-960b-9faa529ce5e6",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMenus",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}